Version 5.0

* IMPROVEMENT: Added KSISigningService and KSIExtendingService which act as a more high level alternatives to KSISigningClient and KSIExtenderClient. Both clients are convertable to services via KSISigningClientServiceAdapter and KSIExtendingClientServiceAdapter.
* IMPROVEMENT: Deprecated VerificationContext.setPduVersion(PduVersion) as PDU version is decided in the client now.
* IMPROVEMENT: Configuration requests in the KSI instance have been deprecated. Callback based asynchronous configuration asking implemented to all the KSISigningServices and KSIExtenderServices.
* FEATURE: HAService (High-availability service) is a service that combines multiple KSISigningServices and KSIExtenderServices to achieve redundancy.
* BUGFIX: RFC3161 record index rule code error code and messages corrected.
* IMPROVEMENT: Renewed and cleaned test resources and improved test coverage.
* BUGFIX: Removed registration time from KSISignature and CalendarHashChain.
* BUGFIX: Removed addAggregationHashChain from KSISignature.
* IMPROVEMENT: Chain index continuation check
* IMPROVEMENT: HMAC algorithm of incoming messages
* IMPROVEMENT: Now possible to verify input hash level, default value is 0, GEN-3 is returned in case of error.
* IMPROVEMENT: TCPClients default threadpool size is now configurable through TCPClient initialization with custom ExecutorService.

Version 4.9

2017-04-05 4.9.95

* FEATURE: Aggregator and extender configuration requests

Version 4.8

2017-03-16 4.8.91

* BUGFIX: Fixed adding datahashes with not the same level value to BlockSigner.

2017-03-13 4.8.89

* BUGFIX: Fixed KsiBlockSigner maxTreeHeight validation.
* BUGFIX: Fixed SimpleHttpPostRequestFuture response handling when response body is empty

Version 4.7

2017-02-22 4.7.85

* IMPROVEMENT: Check, if given hash could be added to the BlockSigner without exceeding given tree height. BlockSigner interface changed, add method returns boolean instead of KsiBlockSigner.