@@ -20,6 +20,7 @@ package com.guardtime.ksi.unisignature.verifier;
 
 import com.guardtime.ksi.exceptions.KSIException;
 import com.guardtime.ksi.hashing.DataHash;
+import com.guardtime.ksi.pdu.PduFactory;
 import com.guardtime.ksi.publication.PublicationData;
 import com.guardtime.ksi.publication.PublicationRecord;
 import com.guardtime.ksi.publication.PublicationsFile;
@@ -123,6 +124,14 @@ public interface VerificationContext {
      * Helper method. Same as {@link KSISignature#getPublicationRecord()}
      */
     PublicationRecord getPublicationRecord();
+
+    /**
+     * Sets the pdu factory used in verification process
+     *
+     * @deprecated Deprecated since 4.10. Has no effect since PduFactory is defined in the KSIExtendingService level.
+     */
+    @Deprecated
+    void setPduFactory(PduFactory pduFactory);
 
     /**
      * Sets the KSISignatureComponentFactory used in verification process
